welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:2: error: missing arguments for method golomb in class golomb;
follow this method with `_' if you want to treat it as a partially applied function
golomb(1) = 1 
^golomb:5: error: type mismatch;
 found   : Unit
 required: Int
	for ( k <- 0 to num ) {
                ^