welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
golomb(1) = 1 

var r=1
	for ( k <- 0 to num ) {

		if (golomb(1) == r) return r

		else return 0

		
	}
	


}
